--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://tanyakemmpere.github.io/"
+baseURL = "https://tanyakemmpere.github.io/labveilletech"
 defaultContentLanguage = "en"
 languageCode = "en"
 
