--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseURL = "http://example.org/"
 defaultContentLanguage = "en"
 languageCode = "en"
 
-title = "My New Hugo Site"
+title = "~tanya~"
 
 theme = "gokarna"
 
